--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,1 +1,13 @@
-@import "tailwindcss";
+body {
+  background-color: #202020;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  text-align: center;
+  margin-top: 3rem;
+}
+
